2009-01-30  Lars Hartmann  <lars (at) chaotika (dot) org>

	* Makefile: moved to t/Makefile
	* t/atom_positive.txt: added.
	* t/atom_test.c: added.
	* t/xpak_test.c: added.
	* t/xpak_test.tbz2: added.

2009-01-29  Lars Hartmann  <lars (at) chaotika (dot) org>

	* lib/liblpxpak.c (lpxpak_datablob_init): added.
	(lpxpak_datablob_destroy): added.
	(lpxpak_datablob_compile): added.
	(lpxpak_blob_compile): changed to use lpxpak_datablob_compile.
	(lpxpak_datablob_compile): changed to return a lpxpak_blob_t (why
	have 3 structs of the same kind for different purposes when you
	can have one..)
	(lpxpak_indexblob_compile): same as for lpxpak_datablob_compile.
	(lpxpak_datablob_t): removed.
	(lpxpak_indexblob_t): removed.

2009-01-28  Lars Hartmann  <lars (at) chaotika (dot) org>

	* lib/liblpxpak.c (lpxpak_indexblob_init): added.
	(lpxpak_indexblob_destroy): added.
	(lpxpak_indexblob_destroy): added.

	* lib/liblpxpak.h (lpxpak_parse_fd): changed to use the newly
	introduced lpxpak_blob_get_fd
	(lpxpak_parse_data): changed to use lpxpak_blob_t structures as
	input.
	(lpxpak_blob_t): added.
	(lpxpak_get_blob_fd): added.
	(lpxpak_blob_init): added.
	(lpxpak_blob_destroy): added.
	(lpxpak_get_blob_fd): changed to use newly introduced
	lpxpak_blob_init().
	(lpxpak_get_blob_fd): renamed to lpxpak_blob_get_fd().
	(lpxpak_blob_get_path): added.
	(lpxpak_blob_compile): added.

2009-01-27  Lars Hartmann  <lars (at) chaotika (dot) org>

	* lib/liblpatom.c: fixed memleaks, buffer overflows and several
	other memory related problems valgrind was complaining about.

2009-01-20  Lars Hartmann  <lars (at) chaotika (dot) org>

	* lib/liblpatom.h: documented.

2009-01-19  Lars Hartmann  <lars (at) chaotika (dot) org>

	* lib/liblpatom.c (lpatom_get_version): does now return the full
	version (including suffix and release).
	(lpatom_get_version): does now use strcat instead of manual string
	handling.
	(lpatom_get_fullname): does now use the new lpatom_get_version()