@@ -1,0 +1,6 @@
+DX = doxygen
+devdoc:
+	${DX} ../doxygen/dev-doc
+
+apidoc:
+	${DX} ../doxygen/api-doc
