@@ -3,7 +3,6 @@ MANPREFIX = ${PREFIX}/share/man
 
 CC = cc
 LD = ${CC}
-DX = doxygen
 
 INCS = -I../lib
 LIBS = -L/usr/lib -lc -L.
@@ -15,9 +14,3 @@ LDFLAGS = ${LIBS}
 
 check-syntax:
 	${CC} -o nul -Wall ${CFLAGS} -S ${CHK_SOURCES}
-
-devdoc:
-	${DX} ../doxygen/dev-doc
-
-apidoc:
-	${DX} ../doxygen/api-doc
